# modelspoor

KiCad/TrackController/: TrackController.kicad_pcb  TrackController.kicad_prl  TrackController.kicad_sch  fp-info-cache  fp-lib-table
KiCad/TrackControllerRevB/: TrackControllerRevB.kicad_pcb  TrackControllerRevB.kicad_prl  TrackControllerRevB.kicad_pro  TrackControllerRevB.kicad_sch  fp-info-cache  fp-lib-table
arduino/Sniffer/: Railuino.cpp  Railuino.h  Sniffer.ino
arduino/ros2_turnout_controller/: CanBusSniffer.code-workspace  platformio.ini
arduino/uros2_wissel_decoder/: uros2_wissel_decoder.ino
arduino/uros2_wissel_decoderV2/: locomotive_control__functions.h  locomotive_control__struct.h  locomotive_control__type_support.h  rosidl_generator_c__visibility_control.h  turnout_control.h  turnout_control__struct.h  uros2_wissel_decoderV2.ino
arduino/wissel_controller/: wissel_controller.ino
config/: create_header_file.py  micro_ros_agent_config.json  track_config.json  turnout_config_a.json  turnout_config_b.json
display_test/: display_test.py
esp32/: esp32.code-workspace
esp32/tft-test/: platformio.ini
linux_service/: rail_track.service
message_display/: platformio.ini
nicegui/: track_config.json
railtrack_nicegui/: package.xml  setup.cfg  setup.py
railtrack_nicegui/launch/: railtrack_launch.py
railtrack_nicegui/railtrack_gui/: railtrack_node.py
railtrack_ui/: CMakeLists.txt  generate_config_paths.py
railway_interfaces/: CMakeLists.txt  package.xml
scripts/: install_microros_agent.sh  requirements.txt  start_dorst_central_gui.sh
(+96 files in other folders)
