<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>railtrack_gui</name>
  <version>1.0.0</version>
  <description>This is the package to control the railtracks with an gui</description>
  <maintainer email="GerardAnneHarkema@gmail.com">Gerard Harkema</maintainer>
  <license>MIT License</license>
  
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
